# jongwonkim987

./: .gitignore 가상본  README.md  be_17_김종원 python1일차과제.ipynb  be_17_김종원문법도전과제.ipynb  python과제2-1.ipynb  python과제3.ipynb  python과제5.ipynb
Admin_페이지_프론트단_제작프로젝트/: join_membership.html  main_page.html
Admin_페이지_프론트단_제작프로젝트/: join_membership.html
DB과제/: DB과제3.sql
DB과제/: DB과제1.ipynb  DB과제2.ipynb  DB과제2.sql  DB과제4.sql
Django실습&과제/Django1/: pyproject.toml
Django실습&과제/Django1-miniProject/: pyproject.toml
Django실습&과제/Django1/config/: settings.py  urls.py
Django실습&과제/Django1/templates/: book_detail.html  book_list.html  premier_leagues.html
FLASK과제/flask과제2/: api.py
FLASK과제/flask과제4/: db.yaml
FLASK과제/flask과제1/: app.py
FLASK과제/flask과제2/: app.py
FLASK과제/flask과제3/: main.py  main1.py
FLASK과제/flask과제4/: app.py  blog.db  post_routes.py
FastApi5/: auth.py  database.py  index.html  main.py  models.py  schemas.py  trading_game.db
challenge과제 초급:중급:고급/: 상급.ipynb
challenge과제 초급:중급:고급/: 중급.ipynb  초급.ipynb
flask과제2/: api.py
html:css과제/: CSS과제2-1.html
html:css과제/: CSS과제1.css  CSS과제2-2.css  JS과제1.html  JS과제2-1(몬스터 게임 잡기 게임 만들기).html  html과제1-1(프로필 페이지 제작).html  html과제1-2(설문조사 양식 제작).html
python과제/: python과제3.ipynb  python과제6.ipynb  python과제8.ipynb
python과제7/: mymath.py
python과제/: python과제2-1.ipynb  python과제2.ipynb  python과제4.ipynb  python과제5.ipynb  python과제6.ipynb
python과제7/: 7일차_과제.ipynb
task-todo/: db.sqlite3  pyproject.toml
(+28 files in other folders)
